Added annotations to the domain files
